# raven

./: .swp  Cargo.toml  LICENSE  README.md
src/: config.rs  events.rs  icons.rs  main.rs  pane.rs  rendering.rs  selection.rs  state.rs  terminal_loop.rs  utils.rs
src/components/: content_area.rs  mod.rs  sidebar.rs
src/core/: mod.rs  pane.rs  rendering.rs
src/core/rendering/: mod.rs
src/hooks/: mod.rs  use_debounce.rs  use_terminal.rs
