[package]
name = "raven"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
freya = { git = "https://github.com/marc2332/freya.git" }
dioxus = { version = "0.4", features = ["macro", "hooks"], default-features = false }
portable-pty = "0.8.1"
anyhow = "*"