[package]
name = "raven"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.4", features = ["macro", "hooks"], default-features = false }
anyhow = "*"
log = "*"
simplelog = { version = "^0.11.0", features = ["paris"]}
freya = { git = "https://github.com/marc2332/freya.git", rev = "7b68806" }
portable-pty = { git = "https://github.com/wez/wezterm.git", rev = "cce0706" }
termwiz = { git = "https://github.com/wez/wezterm.git", rev = "cce0706" }
wezterm-term = { git = "https://github.com/wez/wezterm.git", rev = "cce0706" }
filedescriptor = { git = "https://github.com/wez/wezterm.git", rev = "cce0706" }
skia-safe = { version = "0.72.0", features = ["textlayout"] }
arboard = "3.4.0"
crossbeam = "0.8.4"
tokio = "1.37.0"
