[package]
name = "raven"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.4", features = ["macro", "hooks"], default-features = false }
anyhow = "*"
log = "*"
simplelog = { version = "^0.11.0", features = ["paris"]}
freya = { git = "https://github.com/marc2332/freya.git", rev = "03cb4dc" }
portable-pty = { git = "https://github.com/wez/wezterm.git", rev = "cce0706" }
termwiz = { git = "https://github.com/wez/wezterm.git", rev = "cce0706" }
wezterm-term = { git = "https://github.com/wez/wezterm.git", rev = "cce0706" }
filedescriptor = { git = "https://github.com/wez/wezterm.git", rev = "cce0706" }
config = { git = "https://github.com/wez/wezterm.git", rev = "cce0706" }
skia-safe = { version = "0.75.0", features = ["textlayout"] }
arboard = "3.4.0"
flume = { version = "0.11", features = ["async", "select"] }
tokio = "1"
dirs = "5.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
